--- a/package.json
+++ b/package.json
@@ -1,22 +1,57 @@
 {
   "name": "am-i-safe",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.37",
+    "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^5.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/cli": "latest",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "^2.11.0",
+    "@reduxjs/toolkit": "^2.6.1",
+    "expo": "~52.0.38",
+    "expo-dev-client": "~5.0.16",
+    "expo-device": "~7.0.3",
+    "expo-linking": "~7.0.5",
+    "expo-location": "~18.0.9",
+    "expo-notifications": "~0.29.14",
+    "expo-router": "~4.0.19",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.7"
+    "firebase": "^11.4.0",
+    "formik": "^2.4.6",
+    "lucide-react-native": "^0.488.0",
+    "nativewind": "^4.1.23",
+    "path-scurry": "^2.0.0",
+    "react": "^18.3.1",
+    "react-native": "0.76.7",
+    "react-native-actions-sheet": "^0.9.7",
+    "react-native-bottomsheet-reanimated": "^0.3.1",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "^0.19.13",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
+    "tailwindcss": "^3.4.17",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "^5.3.3"
   },
   "private": true
